--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<h1>Qizhen Yang</h1>
 					<p>Welcome!</p>
 					<div id="buttons">
-						<a href="https://twitter.com/q1zhen"><i class="fa-brands fa-twitter"></i></a>
+						<a href="https://twitter.com/q1zhen_"><i class="fa-brands fa-twitter"></i></a>
 						<a href="https://github.com/q1zhen"><i class="fa-brands fa-github"></i></a>
 						<a href="mailto:hi@qizhen-yang.cn"><i class="fa fa-envelope"></i></a>
 					</div>
